--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html><head>
 <link href="https://vjs.zencdn.net/6.2.7/video-js.css" rel="stylesheet">
 <link href="player.css" rel="stylesheet">
+<link href="player.scss" rel="stylesheet">
 <script src="https://cdn.steemjs.com/lib/latest/steem.min.js"></script>
 <script src="https://vjs.zencdn.net/6.2.7/video.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/webtorrent/0.98.20/webtorrent.min.js"></script>
 <script src="branding.js"></script>
 <script src="persistvolume.js"></script>
 <script src="resolutionswitcher.js"></script>
+<script src="settingsmenubuttons.js"></script>
+<script src="settingsmenuitem.js"></script>
 </head>
 <body style='margin:0'>
 <script>
@@ -77,19 +80,36 @@
       sources:[
         {src:videoUrl,type:"video/mp4"}
       ],
-      techOrder:["html5"],
-      playbackRates:[0.25,0.5,0.75,1,1.25,1.5,2],
-      controlBar:{
-        currentTimeDisplay:true,
-        timeDivider:true,
-        durationDisplay:true
+      'playbackRates':[0.25,0.5,0.75,1,1.25,1.5,2],
+      controlBar: {
+        children: {
+            'playToggle':{},
+            'muteToggle':{},
+            'volumeControl':{},
+            'currentTimeDisplay':{},
+            'timeDivider':{},
+            'durationDisplay':{},
+            'liveDisplay':{},
+            'flexibleWidthSpacer':{},
+            'progressControl':{},
+
+            'settingsMenuButton': {
+                entries : [
+                    'subtitlesButton',
+                    'captionsButton',
+                    'playbackRateMenuButton',
+                    'ResolutionMenuButton'
+                ]
+            },
+            'fullscreenToggle':{}
+        }
       },
       plugins: {
         persistvolume: {
           namespace: 'dtube'
         },
         videoJsResolutionSwitcher: {
-          default: 'Source',
+          default: 'Quality',
           dynamicLabel: true
         }
       }
