--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           'progressControl': {},
           'settingsMenuButton': {
             entries: [
-              // 'subtitlesButton',
-              // 'captionsButton',
+              //  'subtitlesButton',
+              //  'captionsButton',
               'playbackRateMenuButton'
               ]  
           },
@@ -107,7 +107,7 @@
           namespace: 'dtube'
         },
         videoJsResolutionSwitcher: {
-          default: 'Source',
+          default: 'Quality',
           dynamicLabel: true
         }
       }
