--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       });
       document.body.appendChild(c);
       player=videojs("player",{
-        // inactivityTimeout:500,
+        inactivityTimeout:1000,
         sourceOrder:true,
         sources:qualities,
         techOrder:["html5"],
