--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>DTube - The biggest decentralized video platform</title>
+  <title>About DTube</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <img src="img/Logo_White.svg" style="width:80px;" />
+        <img src="img/Logo_White.svg" style="width:100px;margin-bottom:4px;" />
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,7 @@
             <a class="nav-link js-scroll-trigger" href="#kit">Media kit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#links">Links</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -84,7 +84,8 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">What is DTube ?</h2>
           <h3 class="section-subheading text-muted">D.Tube is the biggest decentralized video platform, built on top of the STEEM Blockchain and the IPFS peer-to-peer
-            network.</h3>
+            network.
+          </h3>
         </div>
       </div>
       <div class="row text-center">
@@ -173,7 +174,6 @@
         <div class="col-lg-12">
           <ul class="timeline" id="steemit-widgets-blog">
           </ul>
-          <!-- <div class="text-center"><i class="fa fa-spin fa-spinner"></i></div> -->
           <div class="text-center mt-4">
             <a href="https://steemit.com/@dtube" class="btn btn-sm btn-danger rounded-0" target="_blank">more on steemit.com</a>
           </div>
@@ -181,6 +181,7 @@
       </div>
   </section>
 
+  <!-- FAQ -->
   <section class="bg-light" id="faq">
     <div id="app">
       <div id="faq">
@@ -205,7 +206,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light" id="team">
+  <section  id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -263,13 +264,6 @@
             <p class="text-muted">Search Provider</p>
           </div>
         </div>
-        <!-- <div class="col-sm-2"> -->
-        <!-- <div class="team-member"> -->
-        <!-- <h4>Berk O.</h4> -->
-        <!-- <h6>@steeminator3000</h6> -->
-        <!-- <p class="text-muted">Community Manager</p> -->
-        <!-- </div> -->
-        <!-- </div>	         -->
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -279,8 +273,8 @@
     </div>
   </section>
 
-
-  <section id="contributing" class="py-5">
+  <!-- Contributing -->
+  <section id="contributing" class="py-5 bg-light">
     <div class="container">
       <div class="col-lg-8 mx-auto text-center">
         <h1 class="text-center mt-5 mb-5">Contributing</h1>
@@ -304,7 +298,7 @@
     </div>
   </section>
 
-  <!-- Contributing -->
+  <!-- Media Kit -->
   <section id="kit" class="py-5">
     <div class="container">
       <div class="col-lg-8 mx-auto text-center">
@@ -320,12 +314,12 @@
   </section>
 
   <!-- Contact -->
-  <section id="links">
+  <section id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">There is multiple ways to reach us...</h3>
+          <h2 class="section-heading text-uppercase">Contact</h2>
+          <h3 class="section-subheading text-muted">There are multiple ways to reach us...</h3>
         </div>
       </div>
       <div class="row">
@@ -416,7 +410,6 @@
           <a class="github-button" href="https://github.com/dtube/production" data-icon="octicon-star" data-show-count="true" aria-label="Star dtube about on GitHub">
             Give a Star to DTube
           </a>
-
         </div>
       </div>
   </footer>
@@ -433,8 +426,9 @@
         </div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h4 style="color:black">${TITLE} </a>
-      </h4>
+            <h4 style="color:black">${TITLE}</h4>
+      </a>
+
       </div>
       <div class="timeline-body">
         <p class="text-muted">by
@@ -499,7 +493,9 @@
   <script src="https://cdn.steemjs.com/lib/latest/steem.min.js"></script>
   <script src="https://mktcode.github.io/steemit-widgets/assets/js/steemit-widgets.min.js"></script>
   <script>
-    steem.api.setOptions({ url: 'https://api.steemit.com' });
+    steem.api.setOptions({
+      url: 'https://api.steemit.com'
+    });
     steemitWidgets.blog({
       user: 'dtube',
       element: 'steemit-widgets-blog',
@@ -520,7 +516,6 @@
       priceUSDPrecision: 2,
       updateInterval: 60
     });
-
   </script>
 
 </body>
