html css cleaning

--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
+  <meta name="description" content="About DTube">
+  <meta name="author" content="@dtube">
   <title>About DTube</title>
 
-  <!-- Bootstrap core CSS -->
+  <!-- Bootstrap core -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
+  <!-- Fonts -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 
-  <!-- Custom styles for this template -->
-  <link href="css/dtube.min.css" rel="stylesheet">
-
+  <!-- Styles -->
+  <link href="css/dtube.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -39,8 +33,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
+            <li class="github-star">
+          <a class="github-button" href="https://github.com/dtube/production" 
+               data-icon="octicon-star" data-show-count="true" 
+               aria-label="Star dtube about on GitHub" >Star</a>
+              </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">What is D.Tube?</a>
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
@@ -55,7 +54,7 @@
             <a class="nav-link js-scroll-trigger" href="#contributing">Contributing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#kit">Media kit</a>
+            <a class="nav-link js-scroll-trigger" href="#press">Press</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -69,13 +68,14 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in"></div>
+        <div class="intro-lead-in">
+          <img src="img/Logo_Black.svg">
+        </div>
         <!-- <div class="intro-heading text-uppercase"></div>
 		       <div class="intro-heading text-uppercase"></div> -->
       </div>
     </div>
   </header>
-
 
   <!-- About -->
   <section id="about" class="bg-light">
@@ -83,8 +83,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">What is DTube ?</h2>
-          <h3 class="section-subheading text-muted">D.Tube is the biggest decentralized video platform, built on top of the STEEM Blockchain and the IPFS peer-to-peer
-            network.
+          <h3 class="section-subheading text-muted">D.Tube is the biggest decentralized video platform, built on top of the STEEM Blockchain 
+            and the IPFS peer-to-peer network.
           </h3>
         </div>
       </div>
@@ -278,17 +278,17 @@
     <div class="container">
       <div class="col-lg-8 mx-auto text-center">
         <h1 class="text-center mt-5 mb-5">Contributing</h1>
-        <h3 class="section-subheading text-muted">D.Tube is constantly being developed by our team and enhanced by all the community. You can play your part in it.
-          Concretely, you can help us for :</h3>
+        <h3 class="section-subheading text-muted">D.Tube is constantly being developed by our team and enhanced by all the community. 
+          You can play your part in it. Concretely, you can help us for :</h3>
       </div>
       <div class="row text-center">
-        <div class="col-12 col-sm-6">
+        <div class="col-4  mx-auto">
           <h4 class="text-muted">Source Code</h4>
           <a href="https://github.com/dtube" class="contributing-github-logo">
-            <i class="fa fa-github fa-2x"></i>
+            <i class="fa fa-github fa-5x"></i>
           </a>
         </div>
-        <div class="col-12 col-sm-6 mt-4 mt-sm-0">
+        <div class="col-4 mt-4 mt-sm-0 mx-auto">
           <h4 class="text-muted">Translations</h4>
           <a href="https://crowdin.com/project/dtube" target="_blank">
             <img src="img/logos/crowdin-logo.svg" alt="Crowdin" class="crowdin-logo">
@@ -298,13 +298,20 @@
     </div>
   </section>
 
-  <!-- Media Kit -->
-  <section id="kit" class="py-5">
+  <!-- Press -->
+  <section id="press" class="py-5">
     <div class="container">
       <div class="col-lg-8 mx-auto text-center">
-        <h1 class="text-center mt-5 mb-5">Media kit</h1>
-        <h3 class="section-subheading text-muted">A document which provides all informations about D.Tube.</h3>
+        <h1 class="text-center mt-5 mb-5">Press</h1>
+        <h3 class="section-subheading text-muted">They talk about us</h3>
+        <a href="https://btcmanager.com/steemit-user-builds-decentralized-youtube/" target="_blank">
+          https://btcmanager.com/steemit-user-builds-decentralized-youtube/
+        </a>
       </div>
+      <div class="col-lg-8 mx-auto text-center">
+          <h1 class="text-center mt-5 mb-5">Media Kit</h1>
+          <h3 class="section-subheading text-muted">Pre-packaged set of promotional materials and public relations tool.</h3>
+        </div>
       <div class="row text-center">
         <div class="col-12 col-sm-12">
           <h4 class="text-muted">Download from Github</h4>
@@ -394,41 +401,29 @@
           </div>
         </div>
       </div>
-      <div class="col mt-5 mt-md-0">
-        <div id="steemit-widgets-ticker"></div>
-      </div>
     </div>
   </section>
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <span class="copyright">Copyright &copy; D.Tube 2017-2018</span>
-        </div>
-        <div class="col-md-4">
-          <a class="github-button" href="https://github.com/dtube/production" data-icon="octicon-star" data-show-count="true" aria-label="Star dtube about on GitHub">
-            Give a Star to DTube
-          </a>
-        </div>
-      </div>
+        <div class="col mt-5 mt-md-0">
+            <div id="steemit-widgets-ticker"></div>
+          </div>
   </footer>
   <div>
   </div>
-
 
   <template id="steemit-widgets-blog-template">
     <li>
       <a href="${URL}" target="_blank" style="color:black">
         <div class="timeline-image">
           <span class="timelinenumber">${DATE}</span>
-          <!--<img class="rounded-circle img-fluid" src="${IMAGE}" alt=""> -->
+          <img onload="myfunction" class="blogimg rounded-circle img-fluid" src="" alt=""> 
         </div>
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h4 style="color:black">${TITLE}</h4>
       </a>
-
       </div>
       <div class="timeline-body">
         <p class="text-muted">by
@@ -445,7 +440,6 @@
   <template id="steemit-widgets-ticker-template">
     <div style="border: 0 solid rgb(0, 168, 230); border-radius: 10px; font-family: Arial, Helvetica, sans-serif;    background-color: #ffffff;">
       <div style="color: #666;">
-
         <div style="display: table; table-layout: fixed; width: 100%; text-align: center; font-size: 18px; line-height: 21px; padding: 10px 0 5px;">
           <h5 class="text-center">STEEM Price:</h5>
           <div style="display: table-cell;">
@@ -477,10 +471,6 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.4.4/dist/vue.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
@@ -501,13 +491,13 @@
       element: 'steemit-widgets-blog',
       template: 'steemit-widgets-blog-template',
       limit: 7,
+      defaultImage: 'https://steemitimages.com/DQmXYX9hqSNcikTK8ARb61BPnTk4CKMhaiqr22iCKD8CKsp/steemit-logo.png',
       updateInterval: 0,
       resteemedIndicator: '<i class="fa fa-refresh" title="resteemed"></i>',
       dateCallback: function (date) {
         return moment.utc(date).format('DD MMM YYYY');
       }
     });
-
     steemitWidgets.ticker({
       element: 'steemit-widgets-ticker',
       template: 'steemit-widgets-ticker-template',
@@ -516,6 +506,7 @@
       priceUSDPrecision: 2,
       updateInterval: 60
     });
+
   </script>
 
 </body>
