--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
         </div>
       <div class="row text-center">
         <div class="col-12 col-sm-12">
-          <h4 class="text-muted">Download from Github</h4>
+            <a href="/mediakit.html" target="_blank">
+          <h4 class="text-muted">Download from Github</h4></a>
         </div>
       </div>
     </div>
@@ -476,7 +477,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <!-- Custom scripts for this template -->
   <script src="js/dtube.min.js"></script>
-  <script src="js/index.js"></script>
+  <script src="js/faq.js"></script>
 
   <!-- scripts -->
   <script src="https://buttons.github.io/buttons.js" async defer></script>
