--- a/mediakit.html
+++ b/mediakit.html
@@ -9,9 +9,7 @@
   <link href="css/dtube.css" rel="stylesheet">
 </head>
 <body>
-  <div class="media" style="background:#e2e2e2!important">
-
-  </div>
+  <div class="media" style="background:#e2e2e2!important"></div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
