--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <img src="img/Logo_White.svg" style="width:100px;margin-bottom:4px;" />
+        <img src="img/kit/Logo_White.svg" style="width:100px;margin-bottom:4px;" />
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">
-          <img src="img/Logo_Black.svg">
+          <img src="img/kit/Logo_Black.svg">
         </div>
         <!-- <div class="intro-heading text-uppercase"></div>
 		       <div class="intro-heading text-uppercase"></div> -->
