--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
   <!-- About -->
   <section id="about" class="bg-light">
+      <iframe src="https://discordapp.com/widget?id=347020217966395393&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
