--- a/mediakit.html
+++ b/mediakit.html
@@ -1,15 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Media Kit DTube">
   <meta name="author" content="@dtube">
   <title>Media Kit DTube</title>
+  <!-- Bootstrap core -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/dtube.css" rel="stylesheet">
 </head>
+
 <body>
-  <div class="media" style="background:#e2e2e2!important"></div>
+  <!-- Media -->
+  <section id="media" style="background: #262626;">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading text-uppercase" style="color:white;">DTube logo</h2>
+              <h3 class="section-subheading text-muted">Please do not edit or change the DTube logo.
+              </h3>
+            </div>
+          </div>
+          <div class="row media-container transparent bg-light">
+            <img src='img/kit/Logo_Black.svg' alt=''>
+            <a href='img/kit/Logo_Black.svg'>
+              <h2 style="color:black;">Download as SVG</h2>
+            </a>
+          </div>
+          <hr>
+          <div class="row text-center">
+            <div class="col-md-4 media-container bg-dark transparent">
+              <img src='img/kit/Logo_White.svg' alt=''>
+              <a href='img/kit/Logo_White.svg'>
+              <p class="text-muted">Download as SVG</p>
+            </a>
+            </div>
+            <div class="col-md-4 media-container bg-light transparent">
+              <img src='img/kit/Logo_Black.png' alt=''>
+              <a href='img/kit/Logo_Black.png'>
+              <p class="text-muted">Download as PNG</p>
+            </a>
+            </div>
+            <div class="col-md-4 media-container bg-dark transparent">
+              <img src='img/kit/Logo_White.png' alt=''>
+              <a href='img/kit/Logo_White.png'>
+              <p class="text-muted">Download as PNG</p>
+            </a>
+            </div>
+          </div>
+          <hr>
+          <div class="media-container">
+              <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube Icon</h3>
+            <div class="row text-center">
+                <div class="col-md-3 media-container bg-light transparent mx-auto">
+                    <img src='img/kit/Logo_Black_D.svg' alt=''>
+                    <a href='img/kit/Logo_Black_D.svg'>
+                    <p class="text-muted">Download as SVG</p>
+                  </a>
+                  </div>
+                  <div class="col-md-3 media-container mx-auto">
+                      <p style="margin-bottom:0;margin-top:1rem;" class="text-muted">Examples</p>
+                      <img src='img/kit/examples.png' alt=''>
+                    </div>
+              <div class="col-md-3 media-container bg-dark transparent mx-auto">
+                <img src='img/kit/Logo_White_D.svg' alt=''>
+                <a href='img/kit/Logo_White_D.svg'>
+                <p class="text-muted">Download as SVG</p>
+              </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="container">
+          <h3 class="text-center mt-5 mb-5" style="color:white;">D.Tube colors</h3>
+        <div class="row text-center">
+          <div class="col-md-3 col-sm-6 color-container red">
+            <h6 style="text-align: center;">Red</h6>
+            <div style="text-align: center;">#ff0000</div>
+          </div>
+          <div class="col-md-3 col-sm-6 color-container white">
+            <h6 style="text-align: center;">White</h6>
+            <div style="text-align: center;">#ffffff</div>
+          </div>
+          <div class="col-md-3 col-sm-6 color-container almostblack">
+            <h6 style="text-align: center;">Almost Black</h6>
+            <div style="text-align: center;">#212121</div>
+          </div>
+          <div class="col-md-3 col-sm-6 color-container almostwhite">
+            <h6 style="text-align: center;">Almost White</h6>
+            <div style="text-align: center;">#fafafa</div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <a href="img/kit/DTubeMediaKit.zip">
+          <h3 class="text-center mt-5 mb-5" style="color:white;">Download compressed package</h3>
+        </a>
+      </div>
+  </section>
+
+  </div>
 </body>
-
-
